--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
         android:allowBackup="false"
@@ -65,16 +65,16 @@
         <activity
             android:name=".activity.ExibiInformacoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-            android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden" />
+        android:name=".activity.AcessoInformacoesEstabelecimentoActivity"
+        android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.AvaliarEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.ExibiAvalicoesEstabelecimentoActivity"
             android:windowSoftInputMode="stateHidden" />
-            android:name=".activity.AvalicoesEstabelecimentoActivity"
-            android:windowSoftInputMode="stateHidden" />
+        android:name=".activity.AvalicoesEstabelecimentoActivity"
+        android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.EditarPetActivity"
             android:windowSoftInputMode="stateHidden" />
@@ -97,14 +97,15 @@
         <activity
             android:name=".activity.FiltroEstabelecimentoActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog" />
-        <activity android:name=".activity.VisualizarPromocaoActivity"></activity>
+        <activity android:name=".activity.VisualizarPromocaoActivity" />
         <activity
             android:name=".activity.AvaliarServicoActivity"
             android:label="@string/title_activity_avaliar_servico"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activity.ExibiAvalicoesServicosActivity"></activity>
+        <activity android:name=".activity.ExibiAvalicoesServicosActivity" />
         <activity android:name=".activity.InfoServicoActivity" />
-        <activity android:name=".activity.ContratarServicoActivity"></activity>
+        <activity android:name=".activity.ContratarServicoActivity" />
+        <activity android:name=".activity.OpcoesPromocoes"></activity>
     </application>
 
 </manifest>
